--- a/css/style1.css
+++ b/css/style1.css
@@ -97,10 +97,9 @@ body {
   }
 }
 
-/* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
-@media screen and (max-width: 400px) {
-  .topnav a {
-    float: none;
-    width: 100%;
-  }
-}
+@media(max-width: 450px{
+	.leftcolumn, .rigthcolumn {
+		float: none;
+		width: 100%;
+		padding: 0;
+	}
